--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,29 @@
 
 <body>
   <app-root></app-root>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyBJdftJuPAbtkak5rpWnqtDiTw2wFMYeAM",
+      authDomain: "ionic-app-cd2ee.firebaseapp.com",
+      projectId: "ionic-app-cd2ee",
+      storageBucket: "ionic-app-cd2ee.appspot.com",
+      messagingSenderId: "849012276769",
+      appId: "1:849012276769:web:8ccdeab1f418c7270e6d60",
+      measurementId: "G-9PDCD8EDWM"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
 </body>
 
 </html>
